kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ochami-power-control
  labels:
    app.kubernetes.io/component: power-service
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/component: power-service
  template:
    metadata:
      labels:
        app.kubernetes.io/component: power-service
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: 2379,2380
    spec:
      # TODO this is a CSM-ism and IDK what to do with it
      #serviceAccountName: "jobs-watcher"
      containers:
      - name: ochami-power-control
        image: power-control-stub
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 28007
            name: http
        livenessProbe:
          httpGet:
            path: /v1/liveness
            port: 28007
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /v1/readiness
            port: 28007
          initialDelaySeconds: 30
          periodSeconds: 60
          timeoutSeconds: 25
        #volumeMounts:
        #  - mountPath: /usr/local/cray-pki
        #    name: cray-pki-cacert-vol
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 256Mi
        securityContext:
          runAsUser: 65534
          runAsGroup: 65534
          runAsNonRoot: true
      #volumes:
      #  - configMap:
      #      name: cray-configmap-ca-public-key
      #    name: cray-pki-cacert-vol
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values:
                - ochami-power-control
            topologyKey: kubernetes.io/hostname
