kustomize/base/istio-virtualservice.yaml
# TODO Offhand IDK if there's a way to handle CRs that _might_ be available other than just
# letting them fail. https://stackoverflow.com/questions/64899665/exclude-resource-in-kustomization-yaml
# has means to exclude them at the parent kustomization level 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "ochami-power-control"
  labels:
    app.kubernetes.io/component: power-service
spec:
  hosts:
    - "*"
  gateways:
    - services-gateway
    - customer-admin-gateway
  http:
    - match:
        - uri:
            prefix: "/apis/power-control/v1/"
      rewrite:
        uri: "/v1/"
      route:
        - destination:
            host: "ochami-power-control"
            port:
              number: 80
